--- a/pom.xml
+++ b/pom.xml
@@ -288,6 +288,13 @@ POSSIBILITY OF SUCH DAMAGE.
             <version>${version.jakartaee-lang-model}</version>
             <scope>provided</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-common</artifactId>
+            <version>3.1.9</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
