--- a/pom.xml
+++ b/pom.xml
@@ -288,7 +288,8 @@ POSSIBILITY OF SUCH DAMAGE.
             <version>${version.jakartaee-lang-model}</version>
             <scope>provided</scope>
         </dependency>
-        
+
+        <!-- License: EPL-2.0 -->
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-common</artifactId>
