--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,9 @@ CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
 ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 POSSIBILITY OF SUCH DAMAGE.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 http://maven.apache.org/xsd/maven-4.1.0.xsd">
+    <modelVersion>4.1.0</modelVersion>
     <groupId>jp.mydns.project-k</groupId>
     <artifactId>safi</artifactId>
     <version>3.0.0-M8</version>
@@ -36,8 +36,6 @@ POSSIBILITY OF SUCH DAMAGE.
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
-        <maven.compiler.source>${maven.compiler.release}</maven.compiler.source>
-        <maven.compiler.target>${maven.compiler.release}</maven.compiler.target>
         <maven.compiler.implicit>none</maven.compiler.implicit>
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <jacocoArgLine/>
@@ -60,20 +58,20 @@ POSSIBILITY OF SUCH DAMAGE.
         <version.assertj>3.27.3</version.assertj>
         <version.weld-junit5>5.0.0.Final</version.weld-junit5>
         <version.h2database>2.3.232</version.h2database>
-        <version.jacoco>0.8.12</version.jacoco>
+        <version.jacoco>0.8.13</version.jacoco>
         <version.sonar>5.0.0.4389</version.sonar>
 
         <!-- Versions for Apache Maven Plugins -->
         <version.maven-antrun>3.1.0</version.maven-antrun>
-        <version.maven-clean>3.4.1</version.maven-clean>
+        <version.maven-clean>3.5.0</version.maven-clean>
         <version.maven-resources>3.3.1</version.maven-resources>
         <version.maven-compiler>3.14.0</version.maven-compiler>
         <version.maven-dependency>3.8.1</version.maven-dependency>
-        <version.maven-surefire>3.5.2</version.maven-surefire>
-        <version.maven-failsafe>3.5.2</version.maven-failsafe>
+        <version.maven-surefire>3.5.3</version.maven-surefire>
+        <version.maven-failsafe>3.5.3</version.maven-failsafe>
         <version.maven-war>3.4.0</version.maven-war>
         <version.maven-javadoc>3.11.2</version.maven-javadoc>
-        <version.maven-install>3.1.3</version.maven-install>
+        <version.maven-install>3.1.4</version.maven-install>
     </properties>
 
     <licenses>
@@ -403,6 +401,7 @@ POSSIBILITY OF SUCH DAMAGE.
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
+                    <release>${maven.compiler.release}</release>
                     <compilerArgs>
                         <arg>-Xlint:-options</arg>
                         <arg>-proc:full</arg>
